# learn-python-by-creating-10-apps-course

demo_overview_app_tkinter/: main.py
section_11/: pyproject.toml
section_11/tkinter_basics/: 1_13_window.py  1_3_buttons.py  settings_and_getting_data.py  tkinter_variables.py  window_and_the_widgets.py
section_12/: pyproject.toml
section_12/layouts/: 2_11_responsive.py  2_13_scrollable_widgets.py
section_13/: pyproject.toml
section_13/styling/: 3_7_ttkbootstrap_extra.py
section_13/styling/animations/3_10_animations/: 3_10_animations.py
section_13/styling/images/3_9_images/: images.py
section_14/: pyproject.toml
section_14/qr+progress/1 qr/1 intro/: qr_generator.py
section_14/qr+progress/1 qr/2 input/: qr_generator.py
section_14/qr+progress/1 qr/3 qr image/: qr_generator.py
section_14/qr+progress/1 qr/4 functionality/: qr_generator.py
section_14/qr+progress/1 qr/5 export/: qr_generator.py
section_14/qrcode_projeto/: qr_generator.py
section_15/: pyproject.toml
section_15/bmi+final/2 bmi/: bmi.py
section_15/bmi+progress/2 bmi/0 window setup/: bmi.py  settings.py
section_15/bmi+progress/2 bmi/1 widgets/: bmi.py
section_15/bmi+progress/2 bmi/2 functionality/: bmi.py
section_15/bmi+progress/2 bmi/3 metric units/: bmi.py
section_15/bmi_app/: bmi.py  settings.py
section_16/: pyproject.toml
section_16/snake+final/4 snake/: snake.py
section_16/snake_game/: settings.py  snake.py
